<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>  
    <string name="btnd">.</string>
    <string name="btnEq">=</string>
    <string name="btnMp">M+</string>
    <string name="btnMm">M-</string>
    <string name="btnMc">MC</string>
    <string name="btnMr">MR</string>
    <string name="btnC">C</string>
    <string name="btnP">+</string>
    <string name="btnM">-</string>
    <string name="btnMu">*</string>
    <string name="btnDi">/</string>
    <string name="btnPe">%</string>
	<string name="btnH">History</string>
	<string name="btnBs">BackSpace</string>
</resources>