<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="42.89"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/scr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/BH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/btnH" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:text="Button" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.02"
                android:text="Button" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:text="Button" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:text="Button" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.06"
                android:text="Button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Button" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:text="Button" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:text="Button" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:text="Button" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.09"
                    android:text="Button" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/B7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/B6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/B5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/B4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="Button" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:text="Button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/B3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/B1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/B0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/Button03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="Button" />

            <Button
                android:id="@+id/Button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:text="Button" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>



































